Do not validate the download of the puppet package
It is complaining about the cert, thus disabling cert
validation.

Change-Id: I646c5760acab47bb2867a5e3cc0e0b6b77fe143d

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,6 +3,7 @@
   get_url: >
     url=https://apt.puppetlabs.com/puppetlabs-release-{{ ansible_distribution_release }}.deb
     dest=/tmp/puppetlabs-release-{{ ansible_distribution_release }}.deb
+    validate_certs=no
 
 - name: Install Puppetlabs repository deb package
   apt: deb=/tmp/puppetlabs-release-{{ ansible_distribution_release }}.deb
