Fix sudo/become deprecation warnings
become is the keyword to use forward instead of sudo.

Change-Id: I1e29e3c37337ba999b2e8a970b688e4ec11ea579

--- a/bootstrap_jjb.yml
+++ b/bootstrap_jjb.yml
@@ -2,6 +2,6 @@
 - hosts: meta-infra_type_jenkins
   gather_facts: no
   user: ubuntu
-  sudo: true
+  become: true
   roles:
     - { role: bootstrap_jjb }
