--- a/bootstrap_gerrit.yml
+++ b/bootstrap_gerrit.yml
@@ -3,6 +3,6 @@
 - hosts: meta-infra_type_gerrit
   gather_facts: no
   user: ubuntu
-  sudo: true
+  become: true
   roles:
     - { role: bootstrap_gerrit }
