--- a/run_puppet_on_gerrit.yml
+++ b/run_puppet_on_gerrit.yml
@@ -2,7 +2,7 @@
 - hosts: meta-infra_type_gerrit
   user: ubuntu
   gather_facts: no
-  sudo: true
+  become: true
   name: Run Puppet to install Gerrit
   tasks:
     - puppet:
