Change the old meta puppetmaster group to the expected 'puppetmaster' group
The code is switching from relying on metadata based groups to
dynamically created groups with add_host.
As such, the group containing puppetmaster is now 'puppetmaster'.

Change-Id: Ic66a68fd7e873816ec27be37ce4842eea8268a47

--- a/roles/bootstrap_gerrit/tasks/main.yml
+++ b/roles/bootstrap_gerrit/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Fetch Gerrit MySQL password from Puppetmaster hiera
   command: hiera -c /etc/puppet/hiera.yaml gerrit_mysql_password environment=production
-  delegate_to: "{{ groups['meta-infra_type_puppetmaster'][0] }}"
+  delegate_to: "{{ groups['puppetmaster'][0] }}"
   register: gerrit_mysql_password
   no_log: True
 
