--- a/bootstrap_puppet_infra_nodes.yml
+++ b/bootstrap_puppet_infra_nodes.yml
@@ -1,6 +1,6 @@
 ---
 # file: bootstrap_puppet_infra_nodes.yml
-- hosts: infra:!meta-infra_type_puppetmaster
+- hosts: infra:!puppetmaster
   user: ubuntu
   become: true
   roles:
