--- a/bootstrap_puppetmaster.yml
+++ b/bootstrap_puppetmaster.yml
@@ -1,6 +1,6 @@
 ---
 # file: bootstrap_puppetmaster.yml
-- hosts: meta-infra_type_puppetmaster
+- hosts: puppetmaster
   gather_facts: no
   user: ubuntu
   become: true
