--- a/roles/bootstrap_jjb/tasks/main.yml
+++ b/roles/bootstrap_jjb/tasks/main.yml
@@ -4,7 +4,7 @@
 
 - name: Get JJB password from Puppetmaster Hiera
   command: hiera -c /etc/puppet/hiera.yaml jenkins_jobs_password environment=production
-  delegate_to: "{{ groups['meta-infra_type_puppetmaster'][0] }}"
+  delegate_to: "{{ groups['puppetmaster'][0] }}"
   register: jenkins_jobs_password
   no_log: True
 
