Remove bare variable from with_items
This is to avoid getting a deprecation warning

Change-Id: I7da86832d02b00c94d62c2188c2615c91fb7958b

--- a/roles/set_hostnames/tasks/main.yml
+++ b/roles/set_hostnames/tasks/main.yml
@@ -19,4 +19,4 @@
               line='{{ server_ip }} {{ item }} {{ server_hostname }}'
               insertafter='^127\.0\.0\.1'
               state=present
-  with_items: groups['infra']
+  with_items: "{{ groups['infra'] }}"
