Change the old meta gerrit group to the expected 'gerrit' group
The code is switching from relying on metadata based groups to
dynamically created groups with add_host.
As such, the group containing gerrit is now 'gerrit'.

Change-Id: I235e445f9e0f7e94f52a0c9dfc0df80b55d49bc1

--- a/roles/bootstrap_puppetmaster/tasks/main.yml
+++ b/roles/bootstrap_puppetmaster/tasks/main.yml
@@ -81,7 +81,7 @@
 - name: Deploy Gerrit fqdn hiera file
   copy: >
     src=hiera/fqdn/gerrit.yaml
-    dest=/etc/puppet/hieradata/production/fqdn/{{ groups['meta-infra_type_gerrit'][0] }}.yaml
+    dest=/etc/puppet/hieradata/production/fqdn/{{ groups['gerrit'][0] }}.yaml
 
 - name: Deploy Zuul fqdn hiera file
   copy: >
