--- a/bootstrap_gerrit.yml
+++ b/bootstrap_gerrit.yml
@@ -1,6 +1,6 @@
 ---
 # file: boostrap_gerrit.yml
-- hosts: meta-infra_type_gerrit
+- hosts: gerrit
   gather_facts: no
   user: ubuntu
   become: true
