--- a/roles/bootstrap_puppetmaster/tasks/main.yml
+++ b/roles/bootstrap_puppetmaster/tasks/main.yml
@@ -86,7 +86,7 @@
 - name: Deploy Zuul fqdn hiera file
   copy: >
     src=hiera/fqdn/zuul.yaml
-    dest=/etc/puppet/hieradata/production/fqdn/{{ groups['meta-infra_type_zuul'][0] }}.yaml
+    dest=/etc/puppet/hieradata/production/fqdn/{{ groups['zuul'][0] }}.yaml
 
 - name: Deploy Jenkins fqdn hiera file
   copy: >
