Change the old meta jenkins group to the expected 'jenkins' group
The code is switching from relying on metadata based groups to
dynamically created groups with add_host.
As such, the group containing jenkins is now 'zuul'.

Change-Id: I5958a9fda04255daa028aaf779a208bd517d44a6

--- a/roles/bootstrap_puppetmaster/tasks/main.yml
+++ b/roles/bootstrap_puppetmaster/tasks/main.yml
@@ -91,7 +91,7 @@
 - name: Deploy Jenkins fqdn hiera file
   copy: >
     src=hiera/fqdn/jenkins.yaml
-    dest=/etc/puppet/hieradata/production/fqdn/{{ groups['meta-infra_type_jenkins'][0] }}.yaml
+    dest=/etc/puppet/hieradata/production/fqdn/{{ groups['jenkins'][0] }}.yaml
 
 - name: Start puppet agent service
   service: name=puppet enabled=yes state=started
