--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,7 @@
 ---
 # file: site.yml
 - include: generate_infra_dynamic_groups.yml
+- include: wait_for_servers.yml
 - include: common.yml
 - include: set_hostnames.yml
 - include: bootstrap_puppetmaster.yml
