Set resolv.conf on nodes before bootstrap
In some clouds, the nodes created may not have a usable
dns server from Neutron.
Use the Google one, may set this role parameterized at
some point.

Change-Id: I05fcd867e47fcc45dab25d5be5c8349d272514f4

--- a/site.yml
+++ b/site.yml
@@ -2,6 +2,7 @@
 # file: site.yml
 - include: generate_infra_dynamic_groups.yml
 - include: wait_for_servers.yml
+- include: set_resolv_conf.yml
 - include: common.yml
 - include: set_hostnames.yml
 - include: bootstrap_puppetmaster.yml
