--- a/infra_config.yml.sample
+++ b/infra_config.yml.sample
@@ -1,10 +1,14 @@
 ---
 services:
-  puppetmaster:
-    - name: puppetmaster.infra.test
-  gerrit:
-    - name: gerrit.infra.test
-  zuul:
-    - name: zuul.infra.test
-  nodepool:
-    - name: nodepool.infra.test
+  - name: puppetmaster
+    hosts:
+      - puppetmaster.infra.test
+  - name: gerrit
+    hosts:
+      - gerrit.infra.test
+  - name: zuul
+    hosts:
+      - zuul.infra.test
+  - name: jenkins
+    hosts:
+      - jenkins.infra.test
